Bug 1419225 - Clip transformed rectangles to the maximum allowed values for the appunit coordinates we're converting into. r=miko a=gchang